<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="T_LoggerSendData" Id="{cfd45c35-1ad4-4982-8344-5c37eeb562d9}">
    <Declaration><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

TYPE T_LoggerSendData :
STRUCT
	fbDataChannel		: FB_LoggerSendDch;
	rDataChannelItem	: T_Logger_DCH;
	fbFifo				: FB_DataChannelSenderFifo;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>