<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <POU Name="init_Logger" Id="{ec666466-e630-4260-8002-d9fa42e8db88}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION init_Logger : BOOL
VAR_INPUT
	pLogger			: POINTER TO T_LoggerSendData;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(* Copyright 2017 Cimpress

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. *)

pLogger^.fbDataChannel.InitChannel(SIZEOF(pLogger^.rDataChannelItem), ADR(pLogger^.rDataChannelItem));
pLogger^.fbFifo.DataChannel := ADR(pLogger^.fbDataChannel);
pLogger^.fbFifo.FreeDataPointer := TRUE;
pLogger^.fbFifo.Enable := TRUE;
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>